--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,9 @@ django-rest-auth = "*"
 django-allauth = "*"
 django-cors-headers = "*"
 django-filter = "*"
+gunicorn = "*"
+psycopg2-binary = "*"
+django-on-heroku = "*"
 
 [dev-packages]
 
